kustomize.api/base/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skillsets-redis-db
spec:
  selector:
    matchLabels:
      app: skillsets-redis-db # has to match .spec.template.metadata.labels
  serviceName: "skillsets-redis-db"
#  replicas: 0 # by default is 1
  template:
    metadata:
      labels:
        app: skillsets-redis-db # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: redis/redis-stack:edge
        # command:
        #   - redis-server
        #   - --save
        #   - "60"
        #   - "1"
        #   - --loglevel
        #   - debug
        resources:
          requests:
            cpu: "256m"
            memory: "512M"
        ports:
        - containerPort: 6379
          name: redis-port
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-efs-claim
#  volumeClaimTemplates:
#  - metadata:
#      name: redis-data
#    spec:
#      accessModes: [ "ReadWriteMany" ]
#      storageClassName: "efs-sc-dynamic"
#      resources:
#        requests:
#          storage: 1Gi
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: skillsets-redis-db
spec:
  selector:
    app: skillsets-redis-db
  type: ClusterIP
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
