kustomize.api/base/service.yaml
#############
## SERVICE ##
#############
---
apiVersion: v1
kind: Service
metadata:
  name: skillsets-api
  namespace: skillsets-api
spec:
  selector:
    app: skillsets-api
  ports:
  - name: http
    protocol: TCP
    port: 5000
