kustomize.api/base/ui-manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skillsets-ui
spec:
  selector:
    matchLabels:
      app: skillsets-ui
  # replicas: 1
  template:
    metadata:
      labels:
        app: skillsets-ui
    spec:
      containers:
      - name: skillsets-ui
        image: codesenju/skillsets-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 3

---
apiVersion: v1
kind: Service
metadata:
  name: skillsets-ui
spec:
  selector:
    app: skillsets-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: skillsets
  name: skillsets-ui-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev-skillsets-ui.lmasu.co.za
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skillsets-ui
                port:
                  number: 3000
